# scripts

./: add_llvm_alternative.sh  autolock.sh  backupRoot.sh  backup_work.sh  calc_hexa.c  compare_pdf.sh  deeplists.tex  lock.sh  lookupNotification.sh  myLookup  plotHisto.py  setAlarm  setTime.sh  to_mat.sh  verimag.sh
bib/: bibvisualizer.py  list_publication.bib
ocaml/: ERCTool_250924.opam  default_250924.opam  fgg_250924.opam  installOCamlTools.sh
