opam-version: "2.0"
compiler: ["ocaml.5.2.0"]
roots: [
  "containers.3.14"
  "containers-data.3.14"
  "dune.3.16.0"
  "ezjsonm.1.3.0"
  "fmt.0.9.0"
  "iter.1.8"
  "logs.0.7.0"
  "merlin.5.1-502"
  "mlbdd.0.7.3"
  "ocaml.5.2.0"
  "ocaml-lsp-server.1.19.0"
  "ocamlformat.0.26.2"
  "ocamlgraph.2.1.0"
  "ocp-browser.1.3.6"
  "ppx_derivers.1.2.1"
  "ppx_deriving.6.0.2"
  "ppx_deriving_hash.0.1.2"
  "user-setup.0.8"
  "utop.2.14.0"
]
installed: [
  "astring.0.8.5"
  "base.v0.17.1"
  "base-bigarray.base"
  "base-bytes.base"
  "base-domains.base"
  "base-nnp.base"
  "base-threads.base"
  "base-unix.base"
  "base64.3.5.1"
  "camlp-streams.5.0.1"
  "chrome-trace.3.16.0"
  "cmdliner.1.3.0"
  "conf-bash.1"
  "conf-c++.1.0"
  "conf-findutils.1"
  "conf-gcc.1.0"
  "conf-gmp.4"
  "conf-perl.2"
  "conf-pkg-config.3"
  "conf-python-3.9.0.0"
  "conf-zlib.1"
  "containers.3.14"
  "containers-data.3.14"
  "cppo.1.7.0"
  "csexp.1.5.2"
  "cstruct.6.2.0"
  "dot-merlin-reader.5.1"
  "dune.3.16.0"
  "dune-build-info.3.16.0"
  "dune-configurator.3.16.0"
  "dune-private-libs.3.16.0"
  "dune-rpc.3.16.0"
  "dune-site.3.16.0"
  "dyn.3.16.0"
  "either.1.0.0"
  "ezjsonm.1.3.0"
  "fiber.3.7.0"
  "fix.20230505"
  "fmt.0.9.0"
  "fpath.0.7.3"
  "hex.1.5.0"
  "host-arch-x86_64.1"
  "host-system-other.1"
  "iter.1.8"
  "jsonm.1.0.2"
  "jsonrpc.1.19.0"
  "lambda-term.3.3.2"
  "linenoise.1.5.1"
  "logs.0.7.0"
  "lsp.1.19.0"
  "lwt.5.7.0"
  "lwt_react.1.2.0"
  "menhir.20240715"
  "menhirCST.20240715"
  "menhirLib.20240715"
  "menhirSdk.20240715"
  "merlin.5.1-502"
  "merlin-lib.5.1-502"
  "mew.0.1.0"
  "mew_vi.0.5.0"
  "mlbdd.0.7.3"
  "num.1.5-1"
  "ocaml.5.2.0"
  "ocaml-base-compiler.5.2.0"
  "ocaml-compiler-libs.v0.17.0"
  "ocaml-config.3"
  "ocaml-index.1.0"
  "ocaml-lsp-server.1.19.0"
  "ocaml-options-vanilla.1"
  "ocaml-syntax-shims.1.0.0"
  "ocaml-version.3.6.8"
  "ocaml_intrinsics_kernel.v0.17.1"
  "ocamlbuild.0.15.0"
  "ocamlc-loc.3.16.0"
  "ocamlfind.1.9.6"
  "ocamlformat.0.26.2"
  "ocamlformat-lib.0.26.2"
  "ocamlformat-rpc-lib.0.26.2"
  "ocamlgraph.2.1.0"
  "ocp-browser.1.3.6"
  "ocp-indent.1.8.1"
  "ocp-index.1.3.6"
  "ocplib-endian.1.2"
  "octavius.1.2.2"
  "omd.1.3.2"
  "ordering.3.16.0"
  "ott.0.33"
  "pp.1.2.0"
  "pprint.20230830"
  "ppx_derivers.1.2.1"
  "ppx_deriving.6.0.2"
  "ppx_deriving_hash.0.1.2"
  "ppx_deriving_yojson.3.9.0"
  "ppx_yojson_conv_lib.v0.17.0"
  "ppxlib.0.33.0"
  "re.1.12.0"
  "react.1.2.2"
  "result.1.5"
  "seq.base"
  "sexplib0.v0.17.0"
  "spawn.v0.15.1"
  "stdio.v0.17.0"
  "stdlib-shims.0.3.0"
  "stdune.3.16.0"
  "topkg.1.0.7"
  "trie.1.0.0"
  "uchar.0.0.2"
  "user-setup.0.8"
  "utop.2.14.0"
  "uucp.16.0.0"
  "uuseg.16.0.0"
  "uutf.1.0.3"
  "xdg.3.16.0"
  "yojson.2.2.2"
  "zed.3.2.3"
]
pinned: "z3overlay.dev"
package "z3overlay" {
  opam-version: "2.0"
  version: "dev"
  maintainer: "Gabriel Radanne <drupyog@zoho.com>"
  authors: "Gabriel Radanne <drupyog@zoho.com>"
  license: "MIT"
  tags: ["smt" "Z3"]
  homepage: "https://github.com/termite-analyser/z3overlay"
  doc: "https://termite-analyser.github.io/z3overlay/"
  bug-reports: "https://github.com/termite-analyser/z3overlay/issues"
  depends: [
    "ocaml" {>= "4.03"}
    "dune" {build}
    "z3"
    "zarith"
  ]
  build: [
    ["dune" "subst"] {pinned}
    ["dune" "build" "-p" name "-j" jobs]
    ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ]
  dev-repo: "git+https://github.com/termite-analyser/z3overlay.git"
  url {
    src: "git+https://github.com/termite-analyser/z3overlay.git"
  }
}
