opam-version: "2.0"
compiler: ["ocaml-base-compiler.5.1.0"]
roots: [
  "alcotest.1.8.0"
  "containers.3.14"
  "containers-data.3.14"
  "dune.3.16.0"
  "ezjsonm.1.3.0"
  "fmt.0.9.0"
  "iter.1.8"
  "logs.0.7.0"
  "merlin.4.13-501"
  "ocaml-base-compiler.5.1.0"
  "ocamlformat.0.26.2"
  "ocamlgraph.2.1.0"
  "ocp-browser.1.3.6"
  "ppx_derivers.1.2.1"
  "ppx_deriving.6.0.2"
  "ppx_deriving_hash.0.1.2"
]
installed: [
  "alcotest.1.8.0"
  "astring.0.8.5"
  "base.v0.17.1"
  "base-bigarray.base"
  "base-bytes.base"
  "base-domains.base"
  "base-nnp.base"
  "base-threads.base"
  "base-unix.base"
  "camlp-streams.5.0.1"
  "cmdliner.1.3.0"
  "containers.3.14"
  "containers-data.3.14"
  "cppo.1.7.0"
  "csexp.1.5.2"
  "cstruct.6.2.0"
  "dot-merlin-reader.4.9"
  "dune.3.16.0"
  "dune-build-info.3.16.0"
  "dune-configurator.3.16.0"
  "either.1.0.0"
  "ezjsonm.1.3.0"
  "fix.20230505"
  "fmt.0.9.0"
  "fpath.0.7.3"
  "hex.1.5.0"
  "host-arch-x86_64.1"
  "host-system-other.1"
  "iter.1.8"
  "jsonm.1.0.2"
  "lambda-term.3.3.2"
  "logs.0.7.0"
  "lwt.5.7.0"
  "lwt_react.1.2.0"
  "menhir.20240715"
  "menhirCST.20240715"
  "menhirLib.20240715"
  "menhirSdk.20240715"
  "merlin.4.13-501"
  "merlin-lib.4.13-501"
  "mew.0.1.0"
  "mew_vi.0.5.0"
  "ocaml.5.1.0"
  "ocaml-base-compiler.5.1.0"
  "ocaml-compiler-libs.v0.12.4"
  "ocaml-config.3"
  "ocaml-options-vanilla.1"
  "ocaml-syntax-shims.1.0.0"
  "ocaml-version.3.6.8"
  "ocaml_intrinsics_kernel.v0.17.1"
  "ocamlbuild.0.15.0"
  "ocamlfind.1.9.6"
  "ocamlformat.0.26.2"
  "ocamlformat-lib.0.26.2"
  "ocamlgraph.2.1.0"
  "ocp-browser.1.3.6"
  "ocp-indent.1.8.1"
  "ocp-index.1.3.6"
  "ocplib-endian.1.2"
  "ppx_derivers.1.2.1"
  "ppx_deriving.6.0.2"
  "ppx_deriving_hash.0.1.2"
  "ppxlib.0.33.0"
  "re.1.12.0"
  "react.1.2.2"
  "result.1.5"
  "seq.base"
  "sexplib0.v0.17.0"
  "stdio.v0.17.0"
  "stdlib-shims.0.3.0"
  "topkg.1.0.7"
  "trie.1.0.0"
  "uchar.0.0.2"
  "uucp.16.0.0"
  "uuseg.16.0.0"
  "uutf.1.0.3"
  "yojson.2.2.2"
  "zed.3.2.3"
]
